Journal/website/flask_service.yml
apiVersion: v1
kind: Service
metadata:
  name: myjournal
  labels:
    service: flask
spec:
  selector:
    app: flask
  ports:
  - port: 5000
    targetPort: 5000
